--- a/pages/login.html
+++ b/pages/login.html
@@ -16,7 +16,7 @@
                 <form method="post" action="main.html">
                     <h1>LOG IN<a id="forgot" href="enter-email.html">forgot password?</a></h1>
                     <input size="60" type="text" placeholder="Log-in" class="loginbar" name="login"><br></br></br>
-                    <input size="60" type="text" placeholder="Password" class="passwordbar" name="password"><br></br></br>
+                    <input size="60" type="password" placeholder="Password" class="passwordbar" name="password"><br></br></br>
                     <button type="submit">Log in</button><br></br></br>
                     <a id="new" href="sign-up.html" >click here to create a new account</a>
                 </form>
